# summer-internships-scraper

./: .flake8  .gitignore  README.md  content  main.py  pyproject.toml  run_scraper.sh  setup.py
.github/workflows/: scraper.yml
data/: jobs.json
src/: scraper.py
src/models/: company.py  job_offer.py  offers.py
src/repository/: job_repository.py  jobs.py
src/scrapers/: linkedin_scraper.py
src/utils/: __init__.py  constants.py  exceptions.py  geo_ids.py  markdown_export.py
summer_internships_scraper/: scraper.py
summer_internships_scraper/repository/: jobs.py
summer_internships_scraper/utils/: __init__.py  constants.py  exceptions.py  markdown_export.py
